# makehuman

./: .gitignore  .hgignore  Jenkinsfile  LICENSE.md  README  README.md  pyproject.toml  requirements.txt
blendertools/: copy2blender.bat
blendertools/makeclothes/: __init__.py  error.py  helpers.py  license.txt  makeclothes.py  materials.py  mc.py  project.py  rigidfit.py  uuid4.py
blendertools/maketarget/: __init__.py  convert.py  error.py  export_mh_obj.py  import_obj.py  license.txt  maketarget.py  mh.py  mt.py  perfect.py  pose.py  proxy.py  settings.py  symmetry_map.py  utils.py  xdg_parser.py
blendertools/makewalk/: __init__.py  action.py  armature.py  edit.py  fkik.py  floor.py  io_json.py  license.txt  load.py  loop.py  props.py  retarget.py  simplify.py  source.py  t_pose.py  target.py  utils.py
blendertools/mhx_importer/: __init__.py  error.py  import_scene_mhx.py  importer.py  rigify.py
blendertools/mhx_runtime/: __init__.py  bone_drivers.py  drivers.py  error.py  faceshift.py  fkik.py  hide.py  layers.py  merge.py  shapekeys.py  utils.py  varia.py
buildscripts/: build.conf.example  build_prepare.conf.example  build_prepare.py  generate_changelog.sh  get_build_prepare_output_var.py  graft_exclude.conf  hg_branch_compare.py  hg_contains.sh  hg_diff_size.py  hg_get_release.sh  hg_sync.py  verify_eol.py  versionsentinel.py
buildscripts/darwin/: setup.py
buildscripts/deb/: buildDeb.py  install_deb_dependencies.bash
buildscripts/ppa/: buildPPA.py
buildscripts/rpm/: README.txt  buildRpm.py  install_rpm_dependencies.bash  make_rpm.bash  makehuman  makehuman.spec
buildscripts/translation-staging/: compare.pl  current_master_from_transifex.json  english.json  head.html  update.pl
buildscripts/win32/: README.txt  makePynsistBuild.py  makehuman.spec  mhstartwrapper.py  pynsist.cfg
docs/odt/: README.txt  a.xsl  analyze.xsl  body.xsl  bolds.xsl  br.xsl  content.xml  div.xsl  document.xsl  h1.xsl  h2.xsl  h3.xsl  imagelist.xsl  img.xsl  li.xsl  node.xsl  nodes.xsl  ol.xsl  p.xsl  parse.pl  pre.xsl  preprocess.xsl  section.xsl  sectionbody.xsl  span.xsl  stylesheet.xsl  syncimages.bash  ul.xsl
docs/sphinx/: Makefile  make.bat
mac_packages/OpenGL/: __init__.py  _bytes.py  _configflags.py  _null.py  _opaque.py  constant.py  (+13 more)
makehuman/: __init__.py  build_prepare.py  cleannpz.bat  cleannpz.sh  cleanpyc.bat  cleanpyc.sh  compile_models.py  compile_proxies.py  compile_targets.py  create_pylint_log.py  download_assets.py  download_assets_git.py  license.txt  makehuman  makehuman.py  makehuman.rc  makehuman.spec  pylintrc  setup.nsi
maketarget-standalone/: Readme.txt  compilePyinstaller.bat  compilePyinstaller.sh  maketarget-gui.py  maketarget.py  maketarget.xrc  maketarget_gui.fbp  maketargetlib.py
(+4745 files in other folders)
