[project]
name = "makehuman"
version = "1.2.0"
description = "Open-source software for the modelling of 3-Dimensional humanoid characters."

authors = [
    {name = "makehumancommunity"}
]

dependencies = [
	"numpy>=1.17.4",
	"PyQt5>=5.12.8",
	"PyOpenGL>=3.1.0"
]

requires-python = "==3.11.*"
readme = "README.md"

classifiers = [
        "Development Status :: 5 - Production/Stable"
        "Environment :: X11 Applications :: Qt"
        "Intended Audience :: End Users/Desktop"
        "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
        "Natural Language :: English"
        "Operating System :: MacOS"
        "Operating System :: Microsoft :: Windows"
        "Operating System :: POSIX :: Linux"
        "Programming Language :: Python :: 3.11"
        "Topic :: Artistic Software"
        "Topic :: Multimedia :: Graphics :: 3D Modeling"
        "Topic :: Multimedia :: Graphics :: 3D Rendering"
        "Topic :: Multimedia :: Graphics :: Editors"
        "Topic :: Multimedia :: Graphics"
]

"makehuman.",
[tool.setuptools]
packages = ["makehuman", "makehuman.apps", "makehuman.apps.gui" ,"makehuman.core", "makehuman.lib", "makehuman.plugins", "makehuman.shared"]
py-modules = ["__init__"]

[project.scripts]
makehuman = "makehuman:main.main"

[tool.pdm]
distribution = false
